[project]
name = "dating-bot"
version = "1.1.3"
description = "Telegram dating bot Michalangelo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "environs>=14.1.1",
    "geopy>=2.4.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "redis>=5.2.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.38",
]
