[project]
name = "dating-bot"
version = "1.1.3"
description = "Telegram dating bot Michalangelo"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "environs>=14.1.1",
    "fastapi>=0.104.0",
    "geopy>=2.4.1",
    "jinja2>=3.1.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "python-multipart>=0.0.6",
    "redis>=5.2.1",
    "requests>=2.32.5",
    "ruff>=0.11.2",
    "seaborn>=0.13.2",
    "snoop>=0.6.0",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "database", "data", "utils", "web"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "F", "UP", "B", "SIM", "PL"]
ignore = [
    "F403",  # import * used; unable to detect undefined names
    "F405",  # * may be undefined, or defined from star imports
    "PLR",  # pylint refactor
    "PLW2901",  # for loop variable overwritten
    "PLC1901",  # compare to empty string
    "SIM108",  # use ternary operator
    "F821",  # undefined name in __all__
]
